force-app/main/default/objects/Tower_Block__c/Tower_Block__c.object-meta.xml
<CustomObject>
    <label>Tower/Block</label>
    <nameField>
        <label>Tower Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Towers/Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>