force-app/main/default/objects/Tower_Block__c/fields/Tower_Block_Area__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block_Area__c</fullName>
    <label>Tower/Block Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>