force-app/main/default/objects/Tower_Block__c/fields/Tower_Block_Area_in_acres__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block_Area_in_acres__c</fullName>
    <formula>Tower_Block_Area_In_Sq_ft__c/ 43560</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower/Block Area (in acres.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>