force-app/main/default/objects/Tower_Block__c/fields/Tower_Block_Area_in_bigha__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block_Area_in_bigha__c</fullName>
    <formula>Tower_Block_Area_In_Sq_ft__c/ 17452.0069808</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower/Block Area (in bigha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>