force-app/main/default/objects/Tower_Block__c/fields/Tower_Block_Area_In_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block_Area_In_Sq_ft__c</fullName>
    <formula>if( TEXT(Tower_Block_Area_UOM__c) == &apos;Sq.Ft.&apos;, Tower_Block_Area__c ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Sq.Meter&apos;, Tower_Block_Area__c * 10.7639 ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Acres&apos;, Tower_Block_Area__c * 43560 ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Guntha&apos;, Tower_Block_Area__c * 1089 ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Bigha&apos;, Tower_Block_Area__c * 17452.0069808 ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Sq. Yards&apos;, Tower_Block_Area__c * 8.999991288 ,
if( TEXT(Tower_Block_Area_UOM__c) == &apos;Hectares&apos;, Tower_Block_Area__c * 107639 ,
0
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower/Block Area (In Sq.ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>