force-app/main/default/objects/Tower_Block__c/fields/Tower_Block_Area_UOM__c.field-meta.xml
<CustomField>
    <fullName>Tower_Block_Area_UOM__c</fullName>
    <label>Tower/Block Area UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_UOM</valueSetName>
    </valueSet>
</CustomField>